--- a/Biodata.html
+++ b/Biodata.html
@@ -2,6 +2,13 @@
 <HTML>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
+<style>
+@media only screen and (max-width: 620px) {
+	.menu, .main, .right {
+		width:100%;
+	}
+}
+</style>
 <title>Biodata</title>
 </head>
 
