--- a/Biodata.html
+++ b/Biodata.html
@@ -4,7 +4,9 @@
 <head>
 <style>
 @media only screen and (max-width: 620px) {
+	.menu, .main, .right {
 		width:100%;
+	}
 }
 </style>
 <title>Biodata</title>
@@ -50,10 +52,10 @@ Saya lahir dan besar di Jakarta, kemudian pada kelas 4 sekolah dasar, tepatnya p
 <marquee scrollamount="20"><video width="100" height="100" controls loop autoplay><source src="image/altera.mp4" type="video/mp4"></video></marquee>
 
 <p style="color: white">Music Video dari salah satu lagu favorit saya :</p>
-<CENTER><video height="500" width="1300" controls><source src="video/kwa.mp4" type="video/mp4"></video></CENTER><br><br>
+<CENTER><video height:100% width:100% controls><source src="video/kwa.mp4" type="video/mp4"></video></CENTER><br><br>
 
 <p style="color: white">Lagu lainnya yang saya suka :</p>
-<audio height="200" width="200" controls><source src="audio/looh.mp3" type="audio/mp3"></audio><br><br>
+<audio height:100% width:100% controls><source src="audio/looh.mp3" type="audio/mp3"></audio><br><br>
 
 <p style="color: white">Dibawah ini adalah website yang saya gunakan sebagai panduan bermain FGO :</p>
 
