--- a/Biodata.html
+++ b/Biodata.html
@@ -51,7 +51,7 @@ Saya lahir dan besar di Jakarta, kemudian pada kelas 4 sekolah dasar, tepatnya p
 
 <marquee scrollamount="20"><video width="100" height="100" controls loop autoplay><source src="image/altera.mp4" type="video/mp4"></video></marquee>
 
-<p style="color: white">Music Video dari salah satu lagu favorit saya :</p>
+<p style="color: white">Music Video dari salah satu lagu favorit saya:</p>
 <CENTER><video height:100% width:100% controls><source src="video/kwa.mp4" type="video/mp4"></video></CENTER><br><br>
 
 <p style="color: white">Lagu lainnya yang saya suka :</p>
@@ -59,7 +59,11 @@ Saya lahir dan besar di Jakarta, kemudian pada kelas 4 sekolah dasar, tepatnya p
 
 <p style="color: white">Dibawah ini adalah website yang saya gunakan sebagai panduan bermain FGO :</p>
 
-<CENTER><iframe src="https://fategrandorder.fandom.com/wiki/Fate/Grand_Order_Wikia" height:100% width:100% style="border:none;"></iframe></CENTER><br>
+<CENTER>
+<div id="Container" style="padding-bottom:56.25%; position:relative; display:block; width: 100% height:100%">
+<iframe src="https://fategrandorder.fandom.com/wiki/Fate/Grand_Order_Wikia" height:100% width:100% frameborder="0" allowfullscreen="" style="position: absolute; top: 0; left: 0;"></iframe>
+</div>
+</CENTER><br>
 
 <a href="Form.html"><p style="color: white">Klik disini untuk mengisi form biodata anda</p></a>
 </body>
