--- a/Biodata.html
+++ b/Biodata.html
@@ -40,7 +40,7 @@ RIWAYAT PENDIDIKAN   :<BR>
 UNIVERSITAS TANJUNGPURA
 </PRE></p><BR>
 
-<marquee scrollamount="20" direction="right"><video width="100" height="100" controls loop autoplay><source src="image/altera.mp4" type="video/mp4"></video></marquee><br>
+<marquee scrollamount="20" direction="right"><video width="100" height="100" loop autoplay><source src="image/altera.mp4" type="video/mp4"></video></marquee><br>
 
 <H2 style="color:white"><center>Biodata Lengkap</H2>
 <p style="color:white">Nama saya Juan Martin Limas Indrajaya, saya lahir di Jakarta pada tanggal 5 Maret 2000. Rasi bintang saya adalah pisces. Hobi saya adalah bermain game, dan game favorit saya adalah FGO yang merupakan singkatan dari Fate/Grand Order. Saat ini saya sedang berkuliah di Universitas Tanjungpura, tepatnya di Fakultas Teknik Jurusan Informatika. Saat ini saya sedang menjalani semester 5. Saya tinggal di Jalan Desa Kapur, Perumahan Gading Garden No.A31. NIM saya adalah D1041171019.
