--- a/Biodata.html
+++ b/Biodata.html
@@ -49,7 +49,7 @@ UNIVERSITAS TANJUNGPURA
 Saya lahir dan besar di Jakarta, kemudian pada kelas 4 sekolah dasar, tepatnya pada tahun 2009, saya ikut dengan orang tua saya yang pindah ke kota Pontianak karena alasan pekerjaan. Sejak itu, saya tinggal di kota Pontianak dan menyelesaikan sekolah dasar, sekolah menengah pertama dan sekolah menengah akhir di Pontianak. Saya menyelesaikan sekolah dasar, sekolah menengah pertama dan sekolah menegah atas saya di Sekolah Tunas Bangsa yang terletak di Jalan Arteri Supadio. Setelah menyelesaikan sekolah menengah atas, saya melanjutkan pendidikan di Universitas Tanjungpura. Saya masuk melalui jalur SBMPTN dan mendapatkan UKT IV.
 </p><br>
 
-<marquee scrollamount="20"><video width="100" height="100" controls loop autoplay><source src="image/altera.mp4" type="video/mp4"></video></marquee>
+<marquee scrollamount="20"><video width="100" height="100" loop autoplay><source src="image/altera.mp4" type="video/mp4"></video></marquee>
 
 <p style="color: white">Music Video dari salah satu lagu favorit saya:</p>
 <CENTER><video height:100% width:100% controls><source src="video/kwa.mp4" type="video/mp4"></video></CENTER><br><br>
