--- a/Biodata.html
+++ b/Biodata.html
@@ -52,7 +52,11 @@ Saya lahir dan besar di Jakarta, kemudian pada kelas 4 sekolah dasar, tepatnya p
 <marquee scrollamount="20"><video width="100" height="100" loop autoplay><source src="image/altera.mp4" type="video/mp4"></video></marquee>
 
 <p style="color: white">Music Video dari salah satu lagu favorit saya:</p>
-<CENTER><video height:100% width:100% controls><source src="video/kwa.mp4" type="video/mp4"></video></CENTER><br><br>
+<CENTER>
+<div id="Container" style="padding-bottom:56.25%; position:relative; display:block; width: 100% height:100%">
+<video height:100% width:100% controls><source src="video/kwa.mp4" type="video/mp4"></video>
+</div>
+</CENTER><br><br>
 
 <p style="color: white">Lagu lainnya yang saya suka :</p>
 <audio height:100% width:100% controls><source src="audio/looh.mp3" type="audio/mp3"></audio><br><br>
