--- a/Biodata.html
+++ b/Biodata.html
@@ -53,21 +53,15 @@ Saya lahir dan besar di Jakarta, kemudian pada kelas 4 sekolah dasar, tepatnya p
 
 <p style="color: white">Music Video dari salah satu lagu favorit saya:</p>
 <CENTER>
-<div id="Container" style="padding-bottom:56.25%; position:relative; display:block; width: 100% height:100%">
-<video height:100% width:100% controls><source src="video/kwa.mp4" type="video/mp4"></video>
-</div>
+<video height:100% width:100% controls><source src="video/kwa.mp4" type="video/mp4" frameborder="0" allowfullscreen="" style="position: absolute; top: 0; left: 0;"></video>
 </CENTER><br><br>
 
 <p style="color: white">Lagu lainnya yang saya suka :</p>
-<audio height:100% width:100% controls><source src="audio/looh.mp3" type="audio/mp3"></audio><br><br>
+<audio height:100% width:100% controls><source src="audio/looh.mp3" type="audio/mp3"></audio><br>
 
 <p style="color: white">Dibawah ini adalah website yang saya gunakan sebagai panduan bermain FGO :</p>
 
-<CENTER>
-<div id="Container" style="padding-bottom:56.25%; position:relative; display:block; width: 100% height:100%">
-<iframe src="https://fategrandorder.fandom.com/wiki/Fate/Grand_Order_Wikia" height:100% width:100% frameborder="0" allowfullscreen="" style="position: absolute; top: 0; left: 0;"></iframe>
-</div>
-</CENTER><br>
+<iframe src="https://fategrandorder.fandom.com/wiki/Fate/Grand_Order_Wikia" height:100% width:100%></iframe>
 
 <a href="Form.html"><p style="color: white">Klik disini untuk mengisi form biodata anda</p></a>
 </body>
