--- a/Biodata.html
+++ b/Biodata.html
@@ -52,7 +52,7 @@ Saya lahir dan besar di Jakarta, kemudian pada kelas 4 sekolah dasar, tepatnya p
 <marquee scrollamount="20"><video width="100" height="100" loop autoplay><source src="image/altera.mp4" type="video/mp4"></video></marquee>
 
 <p style="color: white">Music Video dari salah satu lagu favorit saya:</p>
-<video height:100% width:100% controls><source src="video/kwa.mp4" type="video/mp4" frameborder="0" allowfullscreen="" style="position: absolute; top: 0; left: 0;"></video>
+<video height:100% width:100% controls><source src="video/kwa.mp4" type="video/mp4"></video>
 <br><br>
 
 <p style="color: white">Lagu lainnya yang saya suka :</p>
