--- a/Biodata.html
+++ b/Biodata.html
@@ -4,7 +4,9 @@
 <head>
 <style>
 @media only screen and (max-width: 620px) {
+	.menu, .main, .right {
 		width:100%;
+	}
 }
 </style>
 <title>Biodata</title>
@@ -50,7 +52,11 @@ Saya lahir dan besar di Jakarta, kemudian pada kelas 4 sekolah dasar, tepatnya p
 <marquee scrollamount="20"><video width="100" height="100" loop autoplay><source src="image/altera.mp4" type="video/mp4"></video></marquee>
 
 <p style="color: white">Music Video dari salah satu lagu favorit saya:</p>
+<center>
+<div class="spread-video">
 <video height:100% width:100% controls><source src="video/kwa.mp4" type="video/mp4"></video>
+</div>
+</center>
 <br><br>
 
 <p style="color: white">Lagu lainnya yang saya suka :</p>
