--- a/Biodata.html
+++ b/Biodata.html
@@ -3,9 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
 <style>
-@media only screen and (max-width: 480px) {
-		width:100%;
-}
+@media only screen and (max-width: 480px)
 </style>
 <title>Biodata</title>
 </head>
