--- a/Biodata.html
+++ b/Biodata.html
@@ -60,7 +60,7 @@ Saya lahir dan besar di Jakarta, kemudian pada kelas 4 sekolah dasar, tepatnya p
 
 <p style="color: white">Dibawah ini adalah website yang saya gunakan sebagai panduan bermain FGO :</p>
 
-<iframe src="https://fategrandorder.fandom.com/wiki/Fate/Grand_Order_Wikia" height:100% width:100%></iframe>
+<iframe src="https://fategrandorder.fandom.com/wiki/Fate/Grand_Order_Wikia" height="500px" width="500px"></iframe>
 
 <a href="Form.html"><p style="color: white">Klik disini untuk mengisi form biodata anda</p></a>
 </body>
