--- a/Biodata.html
+++ b/Biodata.html
@@ -50,7 +50,7 @@ Saya lahir dan besar di Jakarta, kemudian pada kelas 4 sekolah dasar, tepatnya p
 <p style="color: white">Music Video dari salah satu lagu favorit saya:</p>
 <center>
 <div class="spread-video">
-<video controls><source src="video/kwa.mp4" type="video/mp4" media="all and (max-width:140px)"></video>
+<video controls><source src="video/kwa.mp4" type="video/mp4" height="200" width="250"></video>
 </div>
 </center>
 <br><br>
