--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<title>HTML</title>
-	<meta http-equiv="refresh" content="3; url=Kata Pengantar.html" /> 
+	<meta http-equiv="refresh" content="3; url=https://hisar-managih.blogspot.com" /> 
 </head>
 <body>
 	<p>Redirecting </p>
