ubah kata pengantar

--- a/Kata Pengantar.html
+++ b/Kata Pengantar.html
@@ -4,7 +4,7 @@
 <title>Kata Pengantar</title>
 </head>
 
-<body style="background:red;">
+<body style="background:blue;">
 <H1 style="font-size: 300%"><center>Kata Pengantar</H1>
 
 <p style="font-family:Agency FB; font-size: 140%">Di bawah ini adalah biodata diri saya yang saya buat untuk tugas mata kuliah Pemrograman Web yang saya ambil pada Semester 5 di Teknik Informatika Universitas Tanjungpura. Biodata diri yang saya lampirkan semuanya adalah kenyataan dan bukan merupakan fiksi. Berikut adalah link <a href ="Biodata.html">menuju biodata saya</a> atau klik gambar di bawah ini :
